@@ -1,55 +1,197 @@
-/*package io.eddvance.practice.translatorAmazing.repository;
+package io.eddvance.practice.translatorAmazing.repository;
 
-import jakarta.annotation.PostConstruct;
-import org.springframework.stereotype.Component;
+import io.eddvance.practice.translatorAmazing.entite.Translation;
+import org.springframework.data.domain.Example;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.repository.query.FluentQuery;
 import org.springframework.stereotype.Repository;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
+import java.util.function.Function;
 
 @Repository
-public class FrenchTranslationRepository {
+public class FrenchTranslationRepository implements TranslationRepositoryInterface {
 
-    private final List<String> frenchTranslations = new ArrayList<>();
 
-    @PostConstruct
-    public void init() {
-        frenchTranslations.add("Un");
-        frenchTranslations.add("Deux");
-        frenchTranslations.add("Trois");
-        frenchTranslations.add("Quatre");
-        frenchTranslations.add("Cinq");
-        frenchTranslations.add("Six");
-        frenchTranslations.add("Sept");
-        frenchTranslations.add("Huit");
-        frenchTranslations.add("Neuf");
-        frenchTranslations.add("Dix");
-        frenchTranslations.add("Onze");
-        frenchTranslations.add("Douze");
-        frenchTranslations.add("Treize");
-        frenchTranslations.add("Quatorze");
-        frenchTranslations.add("Quinze");
-        frenchTranslations.add("Seize");
-        frenchTranslations.add("Dix-sept");
-        frenchTranslations.add("Dix-huit");
-        frenchTranslations.add("Dix-neuf");
-        frenchTranslations.add("Vingt");
-        frenchTranslations.add("Vingt et un");
-        frenchTranslations.add("Vingt-deux");
-        frenchTranslations.add("Vingt-trois");
-        frenchTranslations.add("Vingt-quatre");
-        frenchTranslations.add("Vingt-cinq");
-        frenchTranslations.add("Vingt-six");
-        frenchTranslations.add("Vingt-sept");
-        frenchTranslations.add("Vingt-huit");
-        frenchTranslations.add("Vingt-neuf");
-        frenchTranslations.add("Trente");
+    @Override
+    public List<Translation> findByLanguage(String language) {
+        return List.of();
     }
 
-    public List<String> getAll() {
-        return Collections.unmodifiableList(frenchTranslations);
+    @Override
+    public List<Translation> findByLanguageOrderByPosition(String language) {
+        return List.of();
+    }
+
+    @Override
+    public Translation findByLanguageAndPosition(String language, int position) {
+        return null;
+    }
+
+    @Override
+    public List<Translation> findByLanguageOrderByPositionAsc(String language) {
+        return List.of();
+    }
+
+    @Override
+    public void flush() {
+
+    }
+
+    @Override
+    public <S extends Translation> S saveAndFlush(S entity) {
+        return null;
+    }
+
+    @Override
+    public <S extends Translation> List<S> saveAllAndFlush(Iterable<S> entities) {
+        return List.of();
+    }
+
+    @Override
+    public void deleteAllInBatch(Iterable<Translation> entities) {
+
+    }
+
+    @Override
+    public void deleteAllByIdInBatch(Iterable<Long> longs) {
+
+    }
+
+    @Override
+    public void deleteAllInBatch() {
+
+    }
+
+    /**
+     * @param aLong
+     * @deprecated
+     */
+    @Override
+    public Translation getOne(Long aLong) {
+        return null;
+    }
+
+    /**
+     * @param aLong
+     * @deprecated
+     */
+    @Override
+    public Translation getById(Long aLong) {
+        return null;
+    }
+
+    @Override
+    public Translation getReferenceById(Long aLong) {
+        return null;
+    }
+
+    @Override
+    public <S extends Translation> Optional<S> findOne(Example<S> example) {
+        return Optional.empty();
+    }
+
+    @Override
+    public <S extends Translation> List<S> findAll(Example<S> example) {
+        return List.of();
+    }
+
+    @Override
+    public <S extends Translation> List<S> findAll(Example<S> example, Sort sort) {
+        return List.of();
+    }
+
+    @Override
+    public <S extends Translation> Page<S> findAll(Example<S> example, Pageable pageable) {
+        return null;
+    }
+
+    @Override
+    public <S extends Translation> long count(Example<S> example) {
+        return 0;
+    }
+
+    @Override
+    public <S extends Translation> boolean exists(Example<S> example) {
+        return false;
+    }
+
+    @Override
+    public <S extends Translation, R> R findBy(Example<S> example, Function<FluentQuery.FetchableFluentQuery<S>, R> queryFunction) {
+        return null;
+    }
+
+    @Override
+    public <S extends Translation> S save(S entity) {
+        return null;
+    }
+
+    @Override
+    public <S extends Translation> List<S> saveAll(Iterable<S> entities) {
+        return List.of();
+    }
+
+    @Override
+    public Optional<Translation> findById(Long aLong) {
+        return Optional.empty();
+    }
+
+    @Override
+    public boolean existsById(Long aLong) {
+        return false;
+    }
+
+    @Override
+    public List<Translation> findAll() {
+        return List.of();
+    }
+
+    @Override
+    public List<Translation> findAllById(Iterable<Long> longs) {
+        return List.of();
+    }
+
+    @Override
+    public long count() {
+        return 0;
+    }
+
+    @Override
+    public void deleteById(Long aLong) {
+
+    }
+
+    @Override
+    public void delete(Translation entity) {
+
+    }
+
+    @Override
+    public void deleteAllById(Iterable<? extends Long> longs) {
+
+    }
+
+    @Override
+    public void deleteAll(Iterable<? extends Translation> entities) {
+
+    }
+
+    @Override
+    public void deleteAll() {
+
+    }
+
+    @Override
+    public List<Translation> findAll(Sort sort) {
+        return List.of();
+    }
+
+    @Override
+    public Page<Translation> findAll(Pageable pageable) {
+        return null;
     }
 }
 
- */
